--- a/api/package.json
+++ b/api/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "dev:server": "nodemon src/index.js"
   },
   "author": "Luiz Paulo Pilegi de Almeida",
   "license": "ISC",
   "dependencies": {
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
-    "koa-router": "^9.1.0"
+    "koa-router": "^9.1.0",
+    "mongoose": "^5.9.27"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
