--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,22 @@ version: '3.1'
 services:
   api:
     build: './api'
-    container_name: crup_people_api
+    container_name: crud_people_api
     ports: ['3000:3000']
     expose: ['3000']
     environment:
       - PORT=3000
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=password
+      - DB_HOST=db
+      - DB_PORT=27017
+      - DB_NAME=crudpeople
     links:
-      - mongodb
+      - db
     volumes: 
       - ./api:/usr/src/crud-people
     
-  mongodb:
+  db:
     image: mongo:latest
     container_name: mongo_db
     restart: always
     ports: 
       - 27017:27017
-    environment:
-      MONGO_INITDB_DATABASE: crup_people
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: password
