--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "cpf-cnpj-validator": "^1.0.2",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-router": "^9.1.0",
