ajustado portas http

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,28 @@ version: '3.1'
 services:
   api:
     build: './api'
-    container_name: crud_people_api
-    ports: ['3000:3000']
-    expose: ['3000']
+    container_name: api
+    ports: ['3001:3001']
+    expose: ['3001']
     environment:
-      - PORT=3000
+      - PORT=3001
       - DB_HOST=db
       - DB_PORT=27017
       - DB_NAME=crudpeople
     links:
       - db
     volumes: 
-      - ./api:/usr/src/crud-people
+      - ./api:/usr/src/api
+
+  # web:
+  #   build: './web'
+  #   container_name: web
+  #   ports: ['3000:3000']
+  #   expose: ['3000']
+  #   environment:
+  #     - BASE_URL=3000
+  #   volumes: 
+  #     - ./web:/usr/src/web
     
   db:
     image: mongo:latest
